RESOLVED FIXED23075
REGRESSION (r39164): Discarding quantifier on assertion gives incorrect result
https://bugs.webkit.org/show_bug.cgi?id=23075
Summary REGRESSION (r39164): Discarding quantifier on assertion gives incorrect result
Lasse Reichstein Holst Nielsen
Reported 2009-01-02 06:00:51 PST
The follwing javascript expression /^(?=a)?b$/.test("b") evaluates to false since changeset 39164. It should give true, both according to the ECMAScript specification and, e.g., what Firefox does.
Attachments
patch (6.24 KB, patch)
2009-01-15 23:10 PST, Geoffrey Garen
zwarich: review+
Mark Rowe (bdash)
Comment 1 2009-01-02 12:43:44 PST
Geoffrey Garen
Comment 2 2009-01-15 23:10:12 PST
Cameron Zwarich (cpst)
Comment 3 2009-01-15 23:49:05 PST
Comment on attachment 26785 [details] patch r=me, although you should also include the Bugzilla URL in the ChangeLogs.
Geoffrey Garen
Comment 4 2009-01-16 00:02:21 PST
Committed revision 39963.
Note You need to log in before you can comment on or make changes to this bug.