JavaScriptCore/pcre/pcre_compile.cpp
@@ -1058,11 +1058,6 @@ compileBranch(int options, int* brackets, unsigned char** codePtr,
                 
                 reqvary = (repeatMin == repeat_max) ? 0 : REQ_VARY;
                 
-                // A quantifier after an assertion is meaningless, since assertions
-                // don't move index forward. So, we discard it.
-                if (*previous == OP_ASSERT || *previous == OP_ASSERT_NOT)
-                    goto END_REPEAT;
-                
                 opType = 0;                    /* Default single-char op codes */
                 
                 /* Save start of previous item, in case we have to move it up to make space
@@ -1414,6 +1409,15 @@ compileBranch(int options, int* brackets, unsigned char** codePtr,
                     
                     else
                         code[-ketoffset] = OP_KETRMAX + repeatType;
+                }
+                
+                // A quantifier after an assertion is mostly meaningless, but it
+                // can nullify the assertion if it has a 0 minimum.
+                else if (*previous == OP_ASSERT || *previous == OP_ASSERT_NOT) {
+                    if (repeatMin == 0) {
+                        code = previous;
+                        goto END_REPEAT;
+                    }
                 }
                 
                 /* Else there's some kind of shambles */
