LayoutTests/fast/regex/resources/quantified-assertions.js
@@ -24,4 +24,6 @@ debug("\nTesting regexp: " + regexp);
 shouldBeTrue("regexp.test('b')");
 shouldBe("regexp.lastIndex", "0");
 
+shouldBeTrue('/^(?=a)?b$/.test("b")');
+
 var successfullyParsed = true;
